--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-mui-dashboard",
+  "name": "react-dashboard-mui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
